# CareerPilot-AI

./: .coverage  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  generate_test_resume.py  package.json  pnpm-lock.yaml  pyproject.toml  start_postgres.sh  test_result.txt  test_resume.docx  tsconfig.json  turbo.json
.github/workflows/: ci-cd.yml
.turbo/daemon/: 0ac32a4f8290dec2-turbo.log.2026-06-15
apps/api/: alembic.ini  main.py
apps/api/ai/: __init__.py  providers.py
apps/api/alembic/: env.py
apps/api/core/: __init__.py  career_kb.py  celery_app.py  config.py  middleware.py  security.py
apps/api/database/: base.py  session.py
apps/api/ml/: vector_search.py
apps/api/models/: admin.py  analytics.py  career.py  interview.py  mentor.py  resume.py  roadmap.py  user.py
apps/api/repositories/: admin.py  analytics.py  base.py  career.py  interview.py  mentor.py  resume.py  roadmap.py  user.py
apps/api/schemas/: admin.py  analytics.py  career.py  interview.py  mentor.py  resume.py  roadmap.py  user.py
apps/api/services/: admin.py  analytics.py  auth.py  career.py  career_matching.py  interview.py  mentor.py  resume.py  roadmap.py  roadmap_ai.py
apps/api/tasks/: __init__.py  background.py  scheduled.py
apps/api/utils/: email.py  logging.py  redis.py
apps/web/: next.config.js  next.config.ts  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.jsx  layout.tsx  page.jsx  page.tsx
apps/web/hooks/: use-auth.js  use-auth.ts  use-career.js  use-career.ts  use-dashboard.js  use-dashboard.ts  use-resumes.js  use-resumes.ts  use-roadmap.js  use-roadmap.ts
apps/web/services/: admin.ts  analytics.js  analytics.ts  api.js  api.ts  interview.js  interview.ts  mentor.js  mentor.ts
apps/web/store/: auth.js  auth.ts
docs/: ai-ml-architecture.md  architecture.md  db-schema.md  security.md  testing-devops.md
postgres_local/: postgresql.conf  postmaster.opts
postgres_local/base/1/: 1259  2619  2619_vm  2696  2840  2841  (+1 more)
postgres_local/global/: 1214  1232  1233  1260  1260_vm  1262  2671  2672  2676  2677  pg_control  pg_internal.init
postgres_local/pg_xact/: 0000
tests/: test_admin.py  test_analytics.py  test_career_api.py  test_career_matching.py  test_interview.py  test_mentor.py  test_roadmap_engine.py
(+369 files in other folders)
