[tool.poetry]
name = "careerpilot-ai-backend"
version = "1.0.0"
description = "FastAPI Backend for CareerPilot AI"
authors = ["CareerPilot AI Team <engineering@careerpilot.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = { extras = ["email"], version = "^2.7.4" }
pydantic-settings = "^2.3.3"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
alembic = "^1.13.1"
asyncpg = "^0.29.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.9"
pypdf = "^4.2.0"
python-docx = "^1.1.0"
httpx = "^0.27.0"
langchain = "^0.2.5"
langchain-openai = "^0.1.8"
langchain-google-genai = "^1.0.6"
spacy = "^3.7.5"
sentence-transformers = "^3.0.1"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
sentry-sdk = { extras = ["fastapi"], version = "^2.5.1" }
celery = "^5.4.0"
redis = "^5.0.6"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}
bcrypt = "3.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501", # line too long, handled by black/ruff format
    "B008", # do not perform function calls in argument defaults (fastapi dependencies)
]

[tool.ruff.isort]
known-first-party = ["api", "core", "models", "schemas", "repositories", "services", "database", "ai", "ml"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=apps/api"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
